multiple features uploaded and updated